...
                    painter = painterResource(id = R.drawable.full_customization_mascot),
                    contentDescription = "doggo - cute welcome mascot",
                    modifier = Modifier.size(72.dp),
                )
                Spacer(modifier = Modifier.height(8.dp))
                Text(
                    text = "Sign up",
                    style = MaterialTheme.typography.headlineSmall,
                    color = MaterialTheme.colorScheme.primary,
                )
                Spacer(modifier = Modifier.height(24.dp))

                HardOffsetShadow(shape = AuthFieldShape, modifier = Modifier.fillMaxWidth()) {
...
